Adds authorize/capture flow.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,3 +19,10 @@ en:
         cancel: "Don't want to use PayPal? No problems."
         connection_failed: "Could not connect to PayPal."
         generic_error: "PayPal failed. %{reasons}"
+    authorization_id: "Authorization ID"
+    landing_page: "Landing page"
+    logourl: "Logo URL"
+    signature: "Signature"
+    solution: "Solution"
+    transaction_id: "Transaction ID"
+    use_authorization: "Use authorization"
